# Spotty

./: .gitignore  Cargo.toml  Justfile  README.md  RELEASE.md  dev.itsfernn.Spotty.snapshots.json  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: spot-development.yml.bak  spot-quality.yml.bak  spotty-snapshots.yml
data/: dev.itsfernn.Spotty.desktop  dev.itsfernn.Spotty.gschema.xml  dev.itsfernn.Spotty.metainfo.xml  meson.build
doc/: doc.tex  enter.sh
po/: ar.po  bg.po  bn.po  ca.po  cs.po  de.po  el.po  en.po  es.po  et.po  eu.po  fi.po  fr.po  ia.po  id.po  it.po  ja.po  meson.build  nb.po  nl.po  pl.po  pt-br.po  pt.po  ru.po  sl.po  spot.pot  tr.po  uk.po
src/: app.css  main.rs  meson.build  riff.gresource.xml  settings.rs  spotty.gresource.xml  window.blp
src/api/: api_models.rs  cached_client.rs  client.rs  login.html  mod.rs  oauth2.rs  token_store.rs
src/app/: batch_loader.rs  loader.rs  mod.rs
src/app/components/: mod.rs  player_notifier.rs
src/app/components/artist/: artist.blp  artist.ui  mod.rs
src/app/components/artist_details/: artist_details.rs
src/app/components/details/: album_header.rs  details.rs  release_details.rs
src/app/components/device_selector/: component.rs  device_selector.blp  widget.rs
src/app/components/headerbar/: headerbar.blp  widget.rs
src/app/components/login/: login.blp  login.rs
src/app/components/navigation/: factory.rs  home.rs
src/app/components/now_playing/: now_playing.blp  now_playing.rs  now_playing_model.rs
src/app/components/playback/: component.rs  playback.css  playback_controls.blp  playback_controls.rs  playback_info.blp  playback_info.rs  playback_widget.blp  playback_widget.rs
src/app/components/playlist/: playlist.rs  song.blp  song.css  song.rs
src/app/components/playlist_details/: playlist_details.rs  playlist_header.rs  playlist_headerbar.blp  playlist_headerbar.rs
src/app/models/: main.rs  mod.rs
src/app/state/: browser_state.rs  playback_state.rs  screen_states.rs  selection_state.rs  settings_state.rs
src/connect/: player.rs
src/dbus/: listener.rs  mod.rs  mpris.rs
(+19 files in other folders)
