[package]
name = "spotty"
version = "0.5.0"
edition = "2018"
license = "MIT"

[dependencies]
gio = "0.20"
glib = "0.20"
futures = "0.3.18"
serde_json = "1.0.96"
gdk-pixbuf = "^0.20"
ref_filter_map = "1.0.1"
regex = "1.8.3"
form_urlencoded = "1.0.1"
zbus = "4.4.0"
zvariant = "4.2.0"
thiserror = "1.0.40"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
percent-encoding = "2.2.0"
oauth2 = "5.0"
url = "2.4.1"
open = "5.3.0"
libc = "*"
oo7 = "0.5.0"
anyhow = "1.0.102"
# ashpd = "0.12.0"

[dependencies.gtk]
version = "^0.9"
package = "gtk4"
features = ["gnome_47", "blueprint"]

[dependencies.libadwaita]
version = "^0.7"
features = ["v1_6"]

[dependencies.gdk]
version = "^0.9"
package = "gdk4"

[dependencies.tokio]
version = "1"
features = ["rt", "fs", "macros", "sync"]

[dependencies.serde]
version = "^1.0.136"
features = ["derive"]

[dependencies.isahc]
version = "^1.7.2"
features = ["json"]

[dependencies.rand]
version = "^0.8.5"
features = ["small_rng"]

[dependencies.gettext-rs]
version = "=0.7.0"
features = ["gettext-system"]


